--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
       "request": "launch",
       "mode": "auto",
       "program": "main.go",
-      "args": ["--wd", "cmd/testdata/dir1", "info"]
+      "args": ["info", "-wd", "state"]
     },
     {
       "name": "create dir1",
@@ -18,7 +18,7 @@
       "request": "launch",
       "mode": "auto",
       "program": "main.go",
-      "args": ["--wd", "cmd/testdata/dir1", "create"]
+      "args": ["create", "-wd", "state"]
     }
   ]
 }
