--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -2,20 +2,28 @@ before:
   hooks:
     - go mod tidy
 builds:
-  - env:
+  - 
+    main: ./cmd/hashsnap
+    env:
       - CGO_ENABLED=0
-      - GOARM=5
     goos:
       - linux
-      - windows
-      - darwin
+      #- arm
+      #- windows
+      #- darwin
+    goarch:
       - arm
+      - amd64
+    goarm:
+      - 5
+    ldflags:
+      - -s -w -X main.build={{.Version}}
 archives:
   - replacements:
-      darwin: Darwin
+      #darwin: Darwin
       linux: Linux
-      windows: Windows
-      386: i386
+      #windows: Windows
+      #386: i386
       amd64: x86_64
 checksum:
   name_template: 'checksums.txt'
